--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <li><a href="exercise10/exercise10.html">Exercise 10</a></li>
     <li><a href="exercise11.html">Exercise 11</a></li>
     <li><a href="exercise12.html">Exercise 12</a></li>
-    <li><a href="midterm/index.html">Final</a></li>
-    <li><a href="final/index.html">Final</a></li>
+    <li><a href="midterm/index.html">Midterm: "One Piece"</a></li>
+    <li><a href="final/index.html">Final: CUNY Website</a></li>
   </ul>
 
 </body>
